# MCR2_Final_Challenge

./: .gitignore  LICENSE  README.md  frames_2026-06-07_17.34.02.gv  package.xml  run_physical.sh  running4life.md  setup.py
config/: aruco_detector_gazebo.yaml  aruco_ekf.yaml  aruco_jetson.yaml  final_bug_nav.yaml  final_bug_nav_real.yaml  localisation.yaml  localisation_physical.yaml  localisation_sim.yaml  navigation_physical.yaml  reactive_navigation.yaml  visualization.yaml
final_challenge/: aruco_detector_physical.py  aruco_distance_test.py  bug_controller.py  jetson_aruco_adapter.py  localisation.py  puzzlebot_joint_state_publisher.py  scan_inspector.py  sim_aruco_node.py  sim_lidar_node.py  simulator.py  viz_debug.py  wheel_calibration.py
launch/: aruco_ekf.launch.py  aruco_jetson.launch.py  bringup_simulation.launch.py  final_challenge.launch.py  final_gazebo_demo.launch.py  final_simulation_clean.launch.py  gazebo_navigation_minimal.launch.py  navigation_only.launch.py  physical_challenge.launch.py  physical_jetson.launch.py  physical_pc.launch.py  real_aruco_adapter_localisation.launch.py  real_challenge.launch.py  real_robot.launch.py  rviz_gazebo_demo.launch.py  rviz_only_clean.launch.py  sim_base.launch.py  sim_challenge.launch.py  sim_ekf_maze.launch.py  sim_maze_aruco.launch.py  simulation.launch.py  waypoint_test.launch.py
maps/: map_maze_real.pgm  map_maze_real.yaml
models/aruco_70/: model.config  model.sdf
models/aruco_701/: model.config  model.sdf
models/aruco_702/: model.config  model.sdf
models/aruco_703/: model.config  model.sdf
models/aruco_705/: model.config  model.sdf
models/aruco_706/: model.config  model.sdf
models/aruco_708/: model.config  model.sdf
models/aruco_75/: model.config  model.sdf
puzzlebot_sim/: bug_navigation_node.py  localisation.py  wall_following.py
puzzlebot_sim2/: __init__.py  aruco_detector.py  aruco_detector_physical.py  aruco_ekf_localisation.py  aruco_marker_bridge.py  aruco_tf_listener.py  bug_controller.py  covariance_marker.py  final_bug_nav.py  gazebo_covariance_node.py  joint_states.py  localisation.py  package.xml  reactive_navigation_node.py  scan_timestamp_node.py  sim_aruco_node.py  sim_lidar_node.py  simulator.py  visualization_node.py  viz_debug.py  waypoint_driver.py
puzzlebot_sim2/config/: final_bug_nav.yaml  localisation.yaml
puzzlebot_sim2/docs/: DEBUG_CHECKLIST.md  TEAM_HANDOFF.md
puzzlebot_sim2/launch/: navigation_only.launch.py
rviz/: final_challenge.rviz  final_challenge_clean.rviz  puzzlebot_desc.rviz
scripts/: gen_maze.py  generate_aruco_models.py
src/: setup.py
tools/legacy/: fake_scan.py
urdf/: puzzlebot.urdf
worlds/: maze.world  maze_aruco.world
(+46 files in other folders)
