<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puzzlebot_sim2</name>
  <version>0.2.0</version>
  <description>ROS2 package for the MCR2 Final Challenge: Puzzlebot model, localisation, ArUco EKF scaffold and Bug navigation.</description>
  <maintainer email="sofiablancopr@gmail.com">Sofia Blanco Prigmore</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rviz2</depend>

  <!-- Required only for the real-robot ArUco launch. -->
  <exec_depend>aruco_ros</exec_depend>
  <exec_depend>aruco_msgs</exec_depend>
  <exec_depend>camera_info_publisher</exec_depend>
  <exec_depend>ros_deep_learning</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
